; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_scsi_transport_fc.c_fc_destroy_bsgjob.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_scsi_transport_fc.c_fc_destroy_bsgjob.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fc_bsg_job = type { %struct.TYPE_4__, %struct.TYPE_3__, i32, i32, i64 }
%struct.TYPE_4__ = type { %struct.fc_bsg_job* }
%struct.TYPE_3__ = type { %struct.fc_bsg_job* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fc_bsg_job*)* @fc_destroy_bsgjob to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fc_destroy_bsgjob(%struct.fc_bsg_job* %0) #0 {
  %2 = alloca %struct.fc_bsg_job*, align 8
  %3 = alloca i64, align 8
  store %struct.fc_bsg_job* %0, %struct.fc_bsg_job** %2, align 8
  %4 = load %struct.fc_bsg_job*, %struct.fc_bsg_job** %2, align 8
  %5 = getelementptr inbounds %struct.fc_bsg_job, %struct.fc_bsg_job* %4, i32 0, i32 3
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @spin_lock_irqsave(i32* %5, i64 %6)
  %8 = load %struct.fc_bsg_job*, %struct.fc_bsg_job** %2, align 8
  %9 = getelementptr inbounds %struct.fc_bsg_job, %struct.fc_bsg_job* %8, i32 0, i32 4
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load %struct.fc_bsg_job*, %struct.fc_bsg_job** %2, align 8
  %14 = getelementptr inbounds %struct.fc_bsg_job, %struct.fc_bsg_job* %13, i32 0, i32 3
  %15 = load i64, i64* %3, align 8
  %16 = call i32 @spin_unlock_irqrestore(i32* %14, i64 %15)
  br label %38

17:                                               ; preds = %1
  %18 = load %struct.fc_bsg_job*, %struct.fc_bsg_job** %2, align 8
  %19 = getelementptr inbounds %struct.fc_bsg_job, %struct.fc_bsg_job* %18, i32 0, i32 3
  %20 = load i64, i64* %3, align 8
  %21 = call i32 @spin_unlock_irqrestore(i32* %19, i64 %20)
  %22 = load %struct.fc_bsg_job*, %struct.fc_bsg_job** %2, align 8
  %23 = getelementptr inbounds %struct.fc_bsg_job, %struct.fc_bsg_job* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @put_device(i32 %24)
  %26 = load %struct.fc_bsg_job*, %struct.fc_bsg_job** %2, align 8
  %27 = getelementptr inbounds %struct.fc_bsg_job, %struct.fc_bsg_job* %26, i32 0, i32 1
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load %struct.fc_bsg_job*, %struct.fc_bsg_job** %28, align 8
  %30 = call i32 @kfree(%struct.fc_bsg_job* %29)
  %31 = load %struct.fc_bsg_job*, %struct.fc_bsg_job** %2, align 8
  %32 = getelementptr inbounds %struct.fc_bsg_job, %struct.fc_bsg_job* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load %struct.fc_bsg_job*, %struct.fc_bsg_job** %33, align 8
  %35 = call i32 @kfree(%struct.fc_bsg_job* %34)
  %36 = load %struct.fc_bsg_job*, %struct.fc_bsg_job** %2, align 8
  %37 = call i32 @kfree(%struct.fc_bsg_job* %36)
  br label %38

38:                                               ; preds = %17, %12
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @put_device(i32) #1

declare dso_local i32 @kfree(%struct.fc_bsg_job*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
